# TraquitoJetpack

./: CMakeLists.txt  README.md  TraquitoJetpack.code-workspace
app/Traquito/: Application.h  CMakeLists.txt  SubsystemGps.h  Traquito.code-workspace  main.cpp  prj.conf  rpi_pico.overlay  tusb_config.h
src/: Application.h  CopilotControlConfiguration.h  CopilotControlJavaScript.h  CopilotControlMessageDefinition.h  CopilotControlScheduler.cpp  CopilotControlScheduler.h  SubsystemCopilotControl.h  SubsystemGps.h  SubsystemTx.h  SubsystemUserDefined.h  WsprMessageTelemetryExtendedUserDefinedDynamic.h
